<resources>
    <string name="app_name">exaMe</string>
    <string name="Login">Login</string>
    <string name="title_activity_login">Login</string>
    <string name="homeFragment">Home</string>
    <string name="newExamFragment">New</string>
    <string name="finishedFragment">Done</string>
    <string name="statisticFragment">Statistic</string>


    <!-- Strings related to finishedlogin -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_navigation">navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="nevigation_home">HOME</string>
    <string name="nevigation_new">NEW</string>
    <string name="nevigation_done">DONE</string>
    <string name="nevigation_statistic">STATISTIC</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="home_fragment">user e-Mail</string>
    <string name="done_fragment">Hello done fragment</string>
    <string name="new_fragment">WAITTING TESTS :</string>
    <string name="statistic_fragment">Hello statistic fragment</string>

    <string name="approve_answer_btn">Approve Answer</string>

    <!-- Testing activity strings -->
    <string name="create_exams_btn">Create Exams</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="finish_exam">Do you want to finish the exam?</string>
    <string name="exam_done">All of the exam questions have been answered.\nYour grade is: </string>
    <string name="end_of_time">Your time is out.\Your grade is: </string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>

    <string name="create_exam_dialog">Hello new user.\nDo you want to create exams for your user?</string>
</resources>
